--- a/skills/index.html
+++ b/skills/index.html
@@ -95,7 +95,8 @@
         overkill, made websites hard to navigate, etc. One commonly used feature that I was advised not to include in a
         portfolio were vague descriptors such as “innovative” and “hardworking.” After reading why, I understand that it’s
         more important to show how I would demonstrate one of these characteristics rather than to directly state them.</p><br>
-        After my preliminary research, some of the features I decided would make for a good professional website were a 
+        
+        <p>After my preliminary research, some of the features I decided would make for a good professional website were a 
         resume, picture of myself, list of personal projects, and an aesthetically pleasing website. At this point, I 
         realized that my topic was a little too broad. I was reading a lot about what to include in a website and not 
         so much about how to physically create it. Because my overarching goal was to learn more HTML and CSS, I decided 
