--- a/work-2/index.html
+++ b/work-2/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
-  <div align="center">
+<div align="center">
     <h1>Rachael's Website</h1>
   </div>
   <nav>
@@ -23,9 +23,15 @@
      </div>
   </nav>
   <main>
-    <h2>Work-2</h2>
+     <nav>
+      <ul class="writing-samples">
+         <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
+         <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
+      </ul>
+   </nav>
+    <h2>Reflection</h2>
     <div class="boxed">
-      <p>Work-2 goes here.</p>
+      <p>WORK-2 REFLECTION GOES HERE</p>
     </div>
   </main>
 </body>
