--- a/work-2/index.html
+++ b/work-2/index.html
@@ -25,8 +25,9 @@
   <main>
      <nav>
       <ul class="writing-samples">
-         <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
-         <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
+         <li><a href="/work-2/sample-1/">Photo Shop Sample</a></li>
+         <li><a href="/work-2/sample-2/">Audio Sample</a></li>
+        <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
       </ul>
    </nav>
     <h2>Reflection</h2>
