--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -1,1 +1,43 @@
-audio sample
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Rachael's Website</title>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+</head>
+<body>
+  <div align="center">
+    <h1>Rachael's Website</h1>
+  </div>
+  <nav>
+    <div align="center">
+      <ul class="main-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/work-1/">Work-1</a></li>
+        <li><a href="/work-2/">Work-2</a></li>
+        <li><a href="/skills/">Skills</a></li>
+        <li><a href="/presentation/">Presentation</a></li>
+        <li><a href="/portfolio/">Final Portfolio</a></li>
+        <li><a href="/Practice/">Practice</a></li>
+      </ul>
+     </div>
+  </nav>
+  <main>
+     <nav>
+      <ul class="writing-samples">
+         <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
+         <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
+      </ul>
+    </nav>
+    <h2>Fake Craig's List Ad</h2>
+  </div>
+  <div class="boxed">
+    <p>For sale: Highway to Hell Mobile. Price: 1 soul. This vehicle is equipped with flame decals 
+      hand-painted by the Devil himself and is guaranteed to get you to the fiery gates as soon as it’s your time. 
+      Unique features of this vehicle include: heating that will literally make you melt in your seat and a CD mixtape 
+      containing hits like “Hell’s Bells” and “Runnin’ with the Devil.” It does not include air conditioning or breaks. 
+      NOTE: THE HIGHWAY TO HELL MOBILE IS AVAILABLE FOR ONE-TIME USE ONLY. For more information, please call 666-666-6667.</p>
+  </div>
+  </main>
+</body>
+</html>
