--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -24,9 +24,10 @@
   </nav>
   <main>
      <nav>
-      <ul class="writing-samples">
-         <li><a href="/work-1/sample-1/">Writing Sample 1</a></li>
-         <li><a href="/work-1/sample-2/">Writing Sample 2</a></li>
+      <ul class="media-samples">
+         <li><a href="/work-2/sample-1/">Photoshop Sample</a></li>
+         <li><a href="/work-2/sample-2/">Audio Sample</a></li>
+        <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
       </ul>
     </nav>
     <h2>Fake Craig's List Ad</h2>
