--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -30,14 +30,14 @@
         <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
       </ul>
     </nav>
-    <h2>Fake Craig's List Ad</h2>
+    <h2>Photoshop Experiment</h2>
   </div>
   <div class="boxed">
-    <p>For sale: Highway to Hell Mobile. Price: 1 soul. This vehicle is equipped with flame decals 
-      hand-painted by the Devil himself and is guaranteed to get you to the fiery gates as soon as it’s your time. 
-      Unique features of this vehicle include: heating that will literally make you melt in your seat and a CD mixtape 
-      containing hits like “Hell’s Bells” and “Runnin’ with the Devil.” It does not include air conditioning or breaks. 
-      NOTE: THE HIGHWAY TO HELL MOBILE IS AVAILABLE FOR ONE-TIME USE ONLY. For more information, please call 666-666-6667.</p>
+    <p><h2><img src="/Photoshop Experiment.jpg" id="exp" alt="Photoshop Experiment"<h2></p>
+  </div>
+  <h2>Creepy High School Musical Poster</h2>
+  <div class="boxed">
+    <p><h2><img src="/Movie Poster.jpg" id="hsm" alt="Creepy High School Musical"<h2></p>
   </div>
   </main>
 </body>
