--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -33,11 +33,11 @@
     <h2>Photoshop Experiment</h2>
   </div>
   <div class="boxed">
-    <p><h2><img src="/PhotoshopExperiment.jpg" id="exp" alt="Photoshop Experiment"<h2></p>
+    <p><h2><img src="/experiment.png" id="exp" alt="Photoshop Experiment"<h2></p>
   </div>
   <h2>Creepy High School Musical Poster</h2>
   <div class="boxed">
-    <p><h2><img src="/MoviePoster.jpg" id="hsm" alt="Creepy High School Musical"<h2></p>
+    <p><h2><img src="/hsm" id="hsm" alt="Creepy High School Musical"<h2></p>
   </div>
   </main>
 </body>
