--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -24,7 +24,7 @@
   </nav>
   <main>
      <nav>
-      <ul class="media-samples">
+      <ul class="writing-samples">
          <li><a href="/work-2/sample-1/">Photoshop Sample</a></li>
          <li><a href="/work-2/sample-2/">Audio Sample</a></li>
         <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
