--- a/work-2/index.html
+++ b/work-2/index.html
@@ -25,7 +25,7 @@
   <main>
      <nav>
       <ul class="writing-samples">
-         <li><a href="/work-2/sample-1/">Photo Shop Sample</a></li>
+         <li><a href="/work-2/sample-1/">Photoshop Samples</a></li>
          <li><a href="/work-2/sample-2/">Audio Sample</a></li>
         <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
       </ul>
