--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -26,20 +26,26 @@
      <nav>
       <ul class="writing-samples">
          <li><a href="/work-2/sample-1/">Photoshop Samples</a></li>
+        <br>
          <li><a href="/work-2/sample-2/">Audio Sample</a></li>
+        <br>
          <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
       </ul>
     </nav>
-    <h2>Fake Craig's List Ad</h2>
+    <h2>Disaster At Amusment Park Original</h2>
   </div>
-  <div class="boxed">
     <p>
       <audio controls>
         <source src="/DisasterAtAmusementPark.mp3" type="audio/mp3">
-        <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
       </audio>
+  </p>
+  <h2>Disaster At Amusement Park Revised</h2>
+  <br>
+    <p>
+      <audio controls>
+      <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
+      </audio controls>
     </p>
-  </div>
   </main>
 </body>
 </html>
