--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -35,16 +35,16 @@
     <h2>Disaster At Amusment Park Original</h2>
   </div>
     <p>
-      <audio controls>
+      <center><audio controls>
         <source src="/DisasterAtAmusementPark.mp3" type="audio/mp3">
-      </audio>
+        </audio></center>
   </p>
   <h2>Disaster At Amusement Park Revised</h2>
   <br>
     <p>
-      <audio controls>
+      <center><audio controls>
       <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
-      </audio controls>
+        </audio controls></center>
     </p>
   </main>
 </body>
