--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -35,16 +35,16 @@
     <h2>Disaster At Amusment Park Original</h2>
   </div>
     <p>
-      <center><audio controls>
+      <ul class="writing-samples"><audio controls>
         <source src="/DisasterAtAmusementPark.mp3" type="audio/mp3">
-        </audio></center>
+        </audio><ul>
   </p>
   <h2>Disaster At Amusement Park Revised</h2>
   <br>
     <p>
-      <center><audio controls>
+      <ul class="writing-samples"><audio controls>
       <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
-        </audio controls></center>
+        </audio controls></ul>
     </p>
   </main>
 </body>
