--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -37,14 +37,14 @@
     <p>
       <ul class="writing-samples"><audio controls>
         <source src="/DisasterAtAmusementPark.mp3" type="audio/mp3">
-        </audio><ul>
+        </audio></ul>
   </p>
   <h2>Disaster At Amusement Park Revised</h2>
   <br>
     <p>
       <ul class="writing-samples"><audio controls>
       <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
-        </audio controls></ul>
+        </audio></ul>
     </p>
   </main>
 </body>
