--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -40,12 +40,59 @@
         </audio></ul>
   </p>
   <h2>Disaster At Amusement Park Revised</h2>
-  <br>
     <p>
       <ul class="writing-samples"><audio controls>
       <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
         </audio></ul>
     </p>
+<h2>Sources</h2>
+  <div class="boxed">
+    <p> Original Sounds</p>
+        <p>1. Coaster-01 https://freesound.org/people/martian/sounds/19344/</p>
+        <p>2. Crowd at carnival http://soundbible.com/1555-Crowd-At-Carnival.html</p>
+        <p>3. Large crash https://freesound.org/people/CGEffex/sounds/99960/</p>
+        <p>4. Panicked screaming https://freesound.org/people/prucanada/sounds/415354/</p>
+        <p>5. Scared crowd https://freesound.org/people/unchaz/sounds/150961/</p>
+        <p>6. Oh my god https://freesound.org/people/11linda/sounds/167224/</p>
+        <p>7. Carnival merry go round https://freesound.org/people/alienistcog/sounds/126661/</p>
+        <p>8. Children Playing http://soundbible.com/460-Children-Playing.html</p>
+        <p>9. Sunny Day Sound http://soundbible.com/1661-Sunny-Day.html</p>
+        <p>10. House on Fire Sound http://soundbible.com/1901-House-On-Fire.html</p> 
+        <p>11. Crowd At Carnival Sound http://soundbible.com/1555-Crowd-At-Carnival.html</p> 
+        <p>12. Amusement Park Attraction Ride, Terror, March 3rd 2015. https://freesound.org/people/Torror/sounds/265546/</p>
+        <p>13. Ambience, Children, Playing, Distant, A.wav, InspectorJ, 22nd November 2016 https://freesound.org/people/InspectorJ/sounds/398160/</p>
+        <p>14. Kids Screaming 3, BrianDesign, February 11th 2012. https://freesound.org/people/mrbriandesign/sounds/145801/</p>
+        <p>15. Kids Play Room Sounds, Iamgiorgio, December 21st 2016. https://freesound.org/people/Iamgiorgio/sounds/371304/</p>
+        <p>16. Enthusiastic Teens, Tuckerbiker, November 20th 2008. https://freesound.org/people/tuckerbiker/sounds/63342</p>
+        <p>17. People Screaming, Mike Koeing, October 9th 2009. http://soundbible.com/1082-People-Screaming.html</p>
+        <p>18. Outdoor Carnival Sound, Daniel Simon, August 1st 2016. http://soundbible.com/2139-Outdoor-Carnival.html</p>
+        <p>19. Crash, Co3, 2007. https://archive.org/details/Co3_Crash</p>
+        <p>20. Explosion_239, forsan-alislam, June 24th 2012 https://archive.org/details/explosion_239</p>
+        <br>
+        <p>Added Sounds:</p>
+        <p>1. Phone Ringing Sound, acclivity, http://soundbible.com/1407-Phone-Ringing.html</p>
+        <p>2. Hello, AlucardsBride, https://freesound.org/people/AlucardsBride/sounds/173114/</p>
+        <p>3. Laughingkidagain, Noise Collecter; https://freesound.org/people/NoiseCollector/sounds/55209/</p>
+        <p>4. Running sounds; zombiechaser3;https://freesound.org/people/zombiechaser3/sounds/134991/</p>
+        <p>5. Pigeon sound; tigersound; https://freesound.org/people/tigersound/sounds/9329/</p>
+        <p>6. We have Destruction of Earth" http://www.freesfx.co.uk/rx2/mp3s/3/15667_1460476203.mp3</p>
+        <p>7. Robot Space Voice says “Maneuvering For Landing” http://www.freesfx.co.uk/rx2/mp3s/3/15657_1460476200.mp3</p>
+        <p>8. Robot Space Voice says “Ready, Aim, Fire” http://www.freesfx.co.uk/rx2/mp3s/3/15654_1460476200.mp3</p>
+        <p>9. Sirens Starts with Two Following http://www.freesfx.co.uk/rx2/mp3s/3/15553_1460473095.mp3</p>
+        <p>10. Ambulance, Fire, or Police Siren http://www.freesfx.co.uk/rx2/mp3s/3/15548_1460473093.mp3</p>
+        <p>11. Bell 206B Jet Ranger Pass By http://www.freesfx.co.uk/rx2/mp3s/4/16570_1460657659.mp3</p>
+        <p>12. Long Burst from Machine Gun http://www.freesfx.co.uk/rx2/mp3s/6/17950_1464205216.mp3</p>
+        <p>13. Rapid Shooting from 45 Semi-Automatic Revolver http://www.freesfx.co.uk/rx2/mp3s/3/14797_1460120540.mp3</p>
+        <p>14. Six Slow Shots from 22 Cal Hand Gun http://www.freesfx.co.uk/rx2/mp3s/3/14787_1460120537.mp3</p>
+        <p>15. Fast Zap http://www.freesfx.co.uk/rx2/mp3s/6/17946_1464205129.mp3</p>
+        <p>16. Space Fighter and K9P2 http://www.freesfx.co.uk/rx2/mp3s/3/15619_1460475887.mp3</p>
+        <p>17. Laser Shots http://www.freesfx.co.uk/rx2/mp3s/2/14484_1460037268.mp3</p>
+        <p>18. Baby Crying Hard http://www.freesfx.co.uk/rx2/mp3s/1/13556_1459779655.mp3</p>
+        <p>19. Terrified Male Scream http://www.freesfx.co.uk/rx2/mp3s/3/14976_1460135876.mp3</p>
+        <p>20. Ripping Explosion http://www.freesfx.co.uk/rx2/mp3s/6/17955_1464205617.mp3</p>
+        <p>21. Outdoor Dog Kennel with Dogs Barking http://www.freesfx.co.uk/rx2/mp3s/4/16345_1460578853.mp3</p>
+        <p>22. Whistling, ckvoiceover, https://freesound.org/people/ckvoiceover/sounds/401335/ </p>
+</div>
   </main>
 </body>
 </html>
