--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -47,50 +47,50 @@
     </p>
 <h2>Sources</h2>
   <div class="boxed">
-    <p> Original Sounds</p>
-        <p>1. Coaster-01 <a href="https://freesound.org/people/martian/sounds/19344/">Link</a></p>
-        <p>2. Crowd at carnival <a href="http://soundbible.com/1555-Crowd-At-Carnival.html">Link</a></p>
-        <p>3. Large crash <a href="https://freesound.org/people/CGEffex/sounds/99960/">Link</a></p>
-        <p>4. Panicked screaming <a href="https://freesound.org/people/prucanada/sounds/415354/">Link</a></p>
-        <p>5. Scared crowd <a href="https://freesound.org/people/unchaz/sounds/150961/">Link</a></p>
-        <p>6. Oh my god <a href="https://freesound.org/people/11linda/sounds/167224/">Link</a></p>
-        <p>7. Carnival merry go round <a href="https://freesound.org/people/alienistcog/sounds/126661/">Link</a></p>
-        <p>8. Children Playing <a href="http://soundbible.com/460-Children-Playing.html">Link</a></p>
-        <p>9. Sunny Day Sound <a href="http://soundbible.com/1661-Sunny-Day.html">Link</a></p>
-        <p>10. House on Fire Sound <a href="http://soundbible.com/1901-House-On-Fire.html">Link</a></p> 
-        <p>11. Crowd At Carnival Sound <a href="http://soundbible.com/1555-Crowd-At-Carnival.html">Link</a></p> 
-        <p>12. Amusement Park Attraction Ride, Terror, March 3rd 2015. <a href="https://freesound.org/people/Torror/sounds/265546/">Link</a></p>
-        <p>13. Ambience, Children, Playing, Distant, A.wav, InspectorJ, 22nd November 2016 <a href="https://freesound.org/people/InspectorJ/sounds/398160/">Link</a></p>
-        <p>14. Kids Screaming 3, BrianDesign, February 11th 2012. <a href="https://freesound.org/people/mrbriandesign/sounds/145801/">Link</a></p>
-        <p>15. Kids Play Room Sounds, Iamgiorgio, December 21st 2016. <a href="https://freesound.org/people/Iamgiorgio/sounds/371304/">Link</a></p>
-        <p>16. Enthusiastic Teens, Tuckerbiker, November 20th 2008. <a href="https://freesound.org/people/tuckerbiker/sounds/63342">Link</a></p>
-        <p>17. People Screaming, Mike Koeing, October 9th 2009. <a href="http://soundbible.com/1082-People-Screaming.html">Link</a></p>
-        <p>18. Outdoor Carnival Sound, Daniel Simon, August 1st 2016. <a href="http://soundbible.com/2139-Outdoor-Carnival.html">Link</a></p>
-        <p>19. Crash, Co3, 2007. <a href="https://archive.org/details/Co3_Crash">Link</a></p>
-        <p>20. Explosion_239, forsan-alislam, June 24th 2012 <a href="https://archive.org/details/explosion_239">Link</a></p>
+    <p> Original Sounds</p><br>
+        <p>1. Coaster-01 <a href="https://freesound.org/people/martian/sounds/19344/">Link</a></p><br>
+        <p>2. Crowd at carnival <a href="http://soundbible.com/1555-Crowd-At-Carnival.html">Link</a></p><br>
+        <p>3. Large crash <a href="https://freesound.org/people/CGEffex/sounds/99960/">Link</a></p><br>
+        <p>4. Panicked screaming <a href="https://freesound.org/people/prucanada/sounds/415354/">Link</a></p><br>
+        <p>5. Scared crowd <a href="https://freesound.org/people/unchaz/sounds/150961/">Link</a></p><br>
+        <p>6. Oh my god <a href="https://freesound.org/people/11linda/sounds/167224/">Link</a></p><br>
+        <p>7. Carnival merry go round <a href="https://freesound.org/people/alienistcog/sounds/126661/">Link</a></p><br>
+        <p>8. Children Playing <a href="http://soundbible.com/460-Children-Playing.html">Link</a></p><br>
+        <p>9. Sunny Day Sound <a href="http://soundbible.com/1661-Sunny-Day.html">Link</a></p><br>
+        <p>10. House on Fire Sound <a href="http://soundbible.com/1901-House-On-Fire.html">Link</a></p> <br>
+        <p>11. Crowd At Carnival Sound <a href="http://soundbible.com/1555-Crowd-At-Carnival.html">Link</a></p> <br>
+        <p>12. Amusement Park Attraction Ride, Terror, March 3rd 2015. <a href="https://freesound.org/people/Torror/sounds/265546/">Link</a></p><br>
+        <p>13. Ambience, Children, Playing, Distant, A.wav, InspectorJ, 22nd November 2016 <a href="https://freesound.org/people/InspectorJ/sounds/398160/">Link</a></p><br>
+        <p>14. Kids Screaming 3, BrianDesign, February 11th 2012. <a href="https://freesound.org/people/mrbriandesign/sounds/145801/">Link</a></p><br>
+        <p>15. Kids Play Room Sounds, Iamgiorgio, December 21st 2016. <a href="https://freesound.org/people/Iamgiorgio/sounds/371304/">Link</a></p><br>
+        <p>16. Enthusiastic Teens, Tuckerbiker, November 20th 2008. <a href="https://freesound.org/people/tuckerbiker/sounds/63342">Link</a></p><br>
+        <p>17. People Screaming, Mike Koeing, October 9th 2009. <a href="http://soundbible.com/1082-People-Screaming.html">Link</a></p><br>
+        <p>18. Outdoor Carnival Sound, Daniel Simon, August 1st 2016. <a href="http://soundbible.com/2139-Outdoor-Carnival.html">Link</a></p><br>
+        <p>19. Crash, Co3, 2007. <a href="https://archive.org/details/Co3_Crash">Link</a></p><br>
+        <p>20. Explosion_239, forsan-alislam, June 24th 2012 <a href="https://archive.org/details/explosion_239">Link</a></p><br>
         <br>
-        <p>Added Sounds:</p>
-        <p>1. Phone Ringing Sound, acclivity <a href="http://soundbible.com/1407-Phone-Ringing.html">Link</a></p>
-        <p>2. Hello, AlucardsBride <a href="https://freesound.org/people/AlucardsBride/sounds/173114/">Link</a></p>
-        <p>3. Laughingkidagain, Noise Collecter <a href="https://freesound.org/people/NoiseCollector/sounds/55209/">Link</a></p>
-        <p>4. Running sounds; zombiechaser3 <a href="https://freesound.org/people/zombiechaser3/sounds/134991/">Link</a></p>
-        <p>5. Pigeon sound; tigersound; <a href="https://freesound.org/people/tigersound/sounds/9329/">Link</a></p>
-        <p>6. We have Destruction of Earth" <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15667_1460476203.mp3</p>
-        <p>7. Robot Space Voice says “Maneuvering For Landing” <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15657_1460476200.mp3">Link</a></p>
-        <p>8. Robot Space Voice says “Ready, Aim, Fire” <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15654_1460476200.mp3">Link</a></p>
-        <p>9. Sirens Starts with Two Following <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15553_1460473095.mp3">Link</a></p>
-        <p>10. Ambulance, Fire, or Police Siren <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15548_1460473093.mp3">Link</a></p>
-        <p>11. Bell 206B Jet Ranger Pass By <a href="http://www.freesfx.co.uk/rx2/mp3s/4/16570_1460657659.mp3">Link</a></p>
-        <p>12. Long Burst from Machine Gun <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17950_1464205216.mp3">Link</a></p>
-        <p>13. Rapid Shooting from 45 Semi-Automatic Revolver <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14797_1460120540.mp3">Link</a></p>
-        <p>14. Six Slow Shots from 22 Cal Hand Gun <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14787_1460120537.mp3">Link</a></p>
-        <p>15. Fast Zap <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17946_1464205129.mp3">Link</a></p>
-        <p>16. Space Fighter and K9P2 <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15619_1460475887.mp3">Link</a></p>
-        <p>17. Laser Shots <a href="http://www.freesfx.co.uk/rx2/mp3s/2/14484_1460037268.mp3">Link</a></p>
-        <p>18. Baby Crying Hard <a href="http://www.freesfx.co.uk/rx2/mp3s/1/13556_1459779655.mp3">Link</a></p>
-        <p>19. Terrified Male Scream <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14976_1460135876.mp3">Link</a></p>
-        <p>20. Ripping Explosion <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17955_1464205617.mp3">Link</a></p>
-        <p>21. Outdoor Dog Kennel with Dogs Barking <a href="http://www.freesfx.co.uk/rx2/mp3s/4/16345_1460578853.mp3">Link</a></p>
+        <p>Added Sounds:</p><br>
+        <p>1. Phone Ringing Sound, acclivity <a href="http://soundbible.com/1407-Phone-Ringing.html">Link</a></p><br>
+        <p>2. Hello, AlucardsBride <a href="https://freesound.org/people/AlucardsBride/sounds/173114/">Link</a></p><br>
+        <p>3. Laughingkidagain, Noise Collecter <a href="https://freesound.org/people/NoiseCollector/sounds/55209/">Link</a></p><br>
+        <p>4. Running sounds; zombiechaser3 <a href="https://freesound.org/people/zombiechaser3/sounds/134991/">Link</a></p><br>
+        <p>5. Pigeon sound; tigersound; <a href="https://freesound.org/people/tigersound/sounds/9329/">Link</a></p><br>
+        <p>6. We have Destruction of Earth" <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15667_1460476203.mp3</p><br>
+        <p>7. Robot Space Voice says “Maneuvering For Landing” <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15657_1460476200.mp3">Link</a></p><br>
+        <p>8. Robot Space Voice says “Ready, Aim, Fire” <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15654_1460476200.mp3">Link</a></p><br>
+        <p>9. Sirens Starts with Two Following <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15553_1460473095.mp3">Link</a></p><br>
+        <p>10. Ambulance, Fire, or Police Siren <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15548_1460473093.mp3">Link</a></p><br>
+        <p>11. Bell 206B Jet Ranger Pass By <a href="http://www.freesfx.co.uk/rx2/mp3s/4/16570_1460657659.mp3">Link</a></p><br>
+        <p>12. Long Burst from Machine Gun <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17950_1464205216.mp3">Link</a></p><br>
+        <p>13. Rapid Shooting from 45 Semi-Automatic Revolver <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14797_1460120540.mp3">Link</a></p><br>
+        <p>14. Six Slow Shots from 22 Cal Hand Gun <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14787_1460120537.mp3">Link</a></p><br>
+        <p>15. Fast Zap <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17946_1464205129.mp3">Link</a></p><br>
+        <p>16. Space Fighter and K9P2 <a href="http://www.freesfx.co.uk/rx2/mp3s/3/15619_1460475887.mp3">Link</a></p><br>
+        <p>17. Laser Shots <a href="http://www.freesfx.co.uk/rx2/mp3s/2/14484_1460037268.mp3">Link</a></p><br>
+        <p>18. Baby Crying Hard <a href="http://www.freesfx.co.uk/rx2/mp3s/1/13556_1459779655.mp3">Link</a></p><br>
+        <p>19. Terrified Male Scream <a href="http://www.freesfx.co.uk/rx2/mp3s/3/14976_1460135876.mp3">Link</a></p><br>
+        <p>20. Ripping Explosion <a href="http://www.freesfx.co.uk/rx2/mp3s/6/17955_1464205617.mp3">Link</a></p><br>
+        <p>21. Outdoor Dog Kennel with Dogs Barking <a href="http://www.freesfx.co.uk/rx2/mp3s/4/16345_1460578853.mp3">Link</a></p><br>
         <p>22. Whistling, ckvoiceover <a href="https://freesound.org/people/ckvoiceover/sounds/401335/">Link</a></p>
 </div>
   </main>
