--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -47,7 +47,7 @@
     </p>
 <h2>Sources</h2>
   <div class="boxed">
-    <p> Original Sounds</p><br>
+    <p> Original Sounds:</p><br>
         <p>1. Coaster-01 <a href="https://freesound.org/people/martian/sounds/19344/">Link</a></p><br>
         <p>2. Crowd at carnival <a href="http://soundbible.com/1555-Crowd-At-Carnival.html">Link</a></p><br>
         <p>3. Large crash <a href="https://freesound.org/people/CGEffex/sounds/99960/">Link</a></p><br>
