--- a/work-2/sample-3/index.html
+++ b/work-2/sample-3/index.html
@@ -1,1 +1,40 @@
-story board sample
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Rachael's Website</title>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+</head>
+<body>
+  <div align="center">
+    <h1>Rachael's Website</h1>
+  </div>
+  <nav>
+    <div align="center">
+      <ul class="main-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/work-1/">Work-1</a></li>
+        <li><a href="/work-2/">Work-2</a></li>
+        <li><a href="/skills/">Skills</a></li>
+        <li><a href="/presentation/">Presentation</a></li>
+        <li><a href="/portfolio/">Final Portfolio</a></li>
+        <li><a href="/Practice/">Practice</a></li>
+      </ul>
+     </div>
+  </nav>
+  <main>
+     <nav>
+      <ul class="writing-samples">
+         <li><a href="/work-2/sample-1/">Photoshop Samples</a></li>
+        <br>
+         <li><a href="/work-2/sample-2/">Audio Sample</a></li>
+        <br>
+        <li><a href="/work-2/sample-3/">Story Board Sample</a></li>
+      </ul>
+    </nav>
+    <h2>Public Domain Storyboard</h2>
+  </div>
+    <p><h2><img src="/storyboard.png" id="sb" alt="Storyboard"</h2></p>
+  </main>
+</body>
+</html>
