--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -156,7 +156,10 @@
         I incorporated is making sounds come distinctly from the left or right by isolating speakers. This way, I could have
         “controlled chaos” meaning that although a lot is going on at once, each individual sound is still very clear.
         If I were to revise this further, I would work more with volume control and fading to make the sounds even more
-        realistic.<br>
+        realistic.<br><br>
+          <ul class="writing-samples"><audio controls>
+      <source src="/DisasterAtAmusementParkRevised.mp3" type="audio/mp3">
+        </audio></ul><br>
         </p>
     </div>   
   </main>
