--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -112,6 +112,8 @@
             goofy looking movie poster for a parody would be humorous to any viewer but especially to someone that watched
             the movies. Additionally, I would’ve liked to alter the title in some way to fit the genre.<br><br>
           
+            <img src="/hsmrevised.png" id="exp" alt="High School Musical Horror Poster Revised"><br><br>
+          
             <b>2. An example of how you made a choice related to color, fonts, captions, scale, or other aspects of the 
               visual mode.</b><br><br>
 
