--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -136,6 +136,8 @@
           keeping to our roots, so-to-speak, and the roots of Borders, which is the paper book. Thus, the logo passes the
           messages of catering to the more traditional style of reading while making an effort to progress with technology.
           By doing so, the logo would hopefully reach a wider audience.<br><br>
+          
+          <img src="/bordersrevised.png" id="hsm2" alt="Borders Logo Revised"><br><br>
 
          <b>4. An example of something that frustrated you or took a larger amount of time than you would have liked.</b><br><br>
 
