--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,7 +137,7 @@
           messages of catering to the more traditional style of reading while making an effort to progress with technology.
           By doing so, the logo would hopefully reach a wider audience.<br><br>
           
-          <img src="/bordersrevised.png" id="hsm2" alt="Borders Logo Revised"><br><br>
+          <img src="/bordersrevised.png" id="borders" alt="Borders Logo Revised"><br><br>
 
          <b>4. An example of something that frustrated you or took a larger amount of time than you would have liked.</b><br><br>
 
