--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -150,6 +150,8 @@
          such as the eyedropper for getting colors, the paint can for painting larger sections, and the paintbrush for 
          drawing graffiti-like letters. Later, I figured out how to crop images by changing layers after getting help from
         some of my classmates who were more familiar with the inner workings of Photoshop.<br><br>
+          
+          <img src="/experimentrevised.png" id="exp" alt="Cannibal Tuna Casserole Revised"><br><br>
            
         <b>5. An example of something you are particularly proud of</b><br><br>
         I am proud of my “Disaster at an Amusment Park” clip because I’ve made a lot of significant changes from the
