--- a/presentation/index.html
+++ b/presentation/index.html
@@ -18,14 +18,14 @@
         <li><a href="/skills/">Skills</a></li>
         <li><a href="/presentation/">Presentation</a></li>
         <li><a href="/portfolio/">Final Portfolio</a></li>
-        <li><a href="/Practice/">Practice</a><li>
+        <li><a href="/Practice/">Practice</a></li>
       </ul>
      </div>
   </nav>
   <main>
     <h2>Presentation</h2>
     <div class="boxed">
-      <p><a href="/Work-In-Progress Presentation.pdf" download="Work in Progress Presentation"</a></p>
+      <p><a href="/Work-In-Progress-Presentation.pdf" download="Work in Progress Presentation"</a></p>
     </div>
   </main>
 </body>
