--- a/presentation/index.html
+++ b/presentation/index.html
@@ -25,7 +25,7 @@
   <main>
     <h2>Presentation</h2>
     <div class="boxed">
-      <p><a href="/Work-In-Progress-Presentation.pdf" download="Work in Progress Presentation"</a></p>
+      <p><a href="/Work-In-Progress-Presentation.pdf">download="Work in Progress Presentation"</a></p>
     </div>
   </main>
 </body>
