--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -63,7 +63,7 @@
         this approach for my revision of the audio project. The peer feedback I received from the original “Disaster at an
         Amusement Park” audio was helpful in pointing out aspects of the piece that I didn’t realize were confusing while
         also confirming opinions I already had. This help formed the basis of my outline: namely what worked and what didn’t.
-        What worked was the divide between a good day and a bad day. But my audio lacked a clear story or arch. My outline
+        What worked was the divide between a good day and a bad day. But my audio lacked a clear story or arc. My outline
         for the revision was a rough sketch of that story, and once I had that down, I could focus on making that world
         a reality rather than trying to build it as I went. This revision was also an example of using technology I already
         knew to my advantage. When using audacity for the original, I spent more time trying to understand the software and
