--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -116,15 +116,19 @@
           
             <b>2. An example of how you made a choice related to color, fonts, captions, scale, or other aspects of the 
               visual mode.</b><br><br>
+            
+            For my storyboard project, I decided to draw my pictures electronically, but by hand. I did so because it allowed
+            me to have a lot more freedom with what I wanted to go into the story and the actions characters had. I did line drawings
+            for simplicity but I used color to make the images more fun, vibrant, and convey the story I wanted to tell. If I were
+            to do it differently next time, however, I might cut back on some of the details to save time. A storyboard is usually
+            supposed to be the first step in developing a story, movie, comic, or what have you, and thus it does not need to be
+            completely fleshed out. While doing so would probably save me time during the next stage of development because I would
+            have the colors and settings completely mapped out, it isn't necessary. Likely the ideas would change anyway when put
+            into development and the most important aspect of a story board is getting the full story down. That being said, there
+            are some textual elements included in my storyboard that are simple (i.e. the character saying "UGH" is a clear sign of
+            frustration) and essential to getting a good idea of what the final product should be like.<br><br>
 
-            For my logo project, I decided to make a logo for the old bookstore, Borders. Initially it was just a stack of
-            books with a tablet on top. However, for my revision I wanted to make the logo more distinct to Borders. I
-            decided to add the original Borders logo to the bottom of the stack of books. I also discovered that their
-            motto was “Beyond Books.” This excited me because it fits perfectly with the idea of technical progressivism
-            that I was going for. I decided to add the motto to the screen of the tablet. The original tablet was turned
-            off, so I changed the colors to light blue to make it look like it was turned on and that the words were
-            appearing on the screen. Had the motto not been significant, I probably still would have added some different
-            icon or text to the screen of the tablet because I wanted that to be the focal point of the piece.<br><br>
+            <p><h2><img src="/storyboard.png" id="sb" alt="Storyboard"</h2></p><br><br>
 
           <b>3. An example of how you made a choice related to comparing one thing to another.</b><br><br>
 
