--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -128,7 +128,7 @@
             are some textual elements included in my storyboard that are simple (i.e. the character saying "UGH" is a clear sign of
             frustration) and essential to getting a good idea of what the final product should be like.<br><br>
 
-            <p><h2><img src="/storyboard.png" id="sb" alt="Storyboard"</h2></p><br><br>
+            <img src="/storyboard.png" id="sb" alt="Storyboard"><br><br>
 
           <b>3. An example of how you made a choice related to comparing one thing to another.</b><br><br>
 
