--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -96,7 +96,7 @@
         excited to further explore what I learned in this class on my own.
 </p>
     </div>
-    <h2>Showcase of Revised Work</h2>
+    <h2>Showcase of Work</h2>
       <div class="boxed">
         <p> <b>1. An example of how you made a choice related to genre or audience.</b><br><br>
             
